# impresso-content-auth

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-build-publish-release.yml  docker-build-publish.yml
docker/auth_proxy/: README.md  docker-compose.yml  nginx.conf
docker/auth_proxy/static_files/: restricted_file.txt  restricted_file_manifest.json
docker/auth_proxy_local_file/: README.md  docker-compose.yml  nginx.conf
docker/auth_proxy_local_file/static_files/: restricted_file.txt
impresso_content_auth/: __init__.py  config.yml  di.py  main.py  server.py
impresso_content_auth/models/resources/schemas/: iiifPresentationContext.json
impresso_content_auth/service/: solr.py
impresso_content_auth/service/quota_checker/: base.py  null_quota_checker.py  redis_quota_checker.py
impresso_content_auth/strategy/: __init__.py
impresso_content_auth/strategy/extractor/: base.py  bearer_token.py  cookie_bitmap_extractor.py  cookie_user_id_extractor.py  iiif_presentation_manifest.py  iiif_uri_doc_id_extractor.py  manifest_with_secret.py  solr_document.py  static_secret.py
impresso_content_auth/strategy/matcher/: base.py  bitwise_and.py  equality.py  quota_matcher.py
impresso_content_auth/utils/: bitmap.py  jwt_utils.py
test/resources/: iiif_manifest.json
test/strategy/extractor/: test_iiif_presentation_manifest.py
