[project]
name = "impresso-content-auth"
version = "0.1.0"
description = "Impresso Content Authorization service"
authors = [
    {name = "Roman Kalyakin",email = "roman@kalyakin.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "starlette (>=0.46.2,<0.47.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]

[project.scripts]
impresso-auth = "impresso_content_auth.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pre-commit = "^4.2.0"

