[project]
authors = [
  {name = "Roman Kalyakin", email = "roman@kalyakin.com"},
]
dependencies = [
  "starlette (>=0.46.2,<0.47.0)",
  "uvicorn (>=0.34.2,<0.35.0)",
  "httpx[socks] (>=0.27.0,<1.0.0)",
  "dependency-injector[yaml] (>=4.47.0,<5.0.0)",
  "python-dotenv (>=1.1.0,<2.0.0)",
]
description = "Impresso Content Authorization service"
name = "impresso-content-auth"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.scripts]
impresso-auth = "impresso_content_auth.main:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[tool.flake8]
max-line-length = 120
